--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,19 @@ a {
 * {
   box-sizing: border-box;
 }
+
+button {
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: flex-start;
+}
+
+svg {
+  stroke-width: 2px;
+}
